--- a/src/app/tasks/tasks-container/calendar/calendar.component.css
+++ b/src/app/tasks/tasks-container/calendar/calendar.component.css
@@ -11,14 +11,14 @@
 
 .grid{
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: 14% 14% 14% 14% 14% 14% 14%;
   grid-gap: 5px;
   width: 100%;
   height: 100%;
   width: 95%;
   height: 90%;
   margin: auto;
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: 16% 16% 16% 16% 16% 16%;
 }
 
 .grid-week-days{
@@ -103,6 +103,12 @@
   height: 100%;
 }
 
+.calendar{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
 .calendar-top-bar{
   display: flex;
 }
@@ -132,6 +138,9 @@
 
 .task-name{
   width: 100%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .current-day{
@@ -148,3 +157,7 @@
   background-color: burlywood;
 }
 
+.tasks-panel{
+  display: flex;
+  flex-direction: column;
+}
