--- a/src/app/tasks/tasks-container/calendar/calendar.component.css
+++ b/src/app/tasks/tasks-container/calendar/calendar.component.css
@@ -59,7 +59,8 @@
 }
 
 .date-control-value{
-  width:200px;
+  min-width: 100px;
+  text-align: center;
 }
 
 .task-item{
@@ -93,7 +94,7 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 } */
 
-.tasks-without-date{
+.calendar-tasks{
   width: 100px;
   height: 100%;
 }
@@ -101,6 +102,16 @@
 .calendar-container{
   display: flex;
   height: 100%;
+}
+
+.calendar{
+  width: 100%;
+}
+
+.calendar-tasks-container{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .calendar-top-bar{
