--- a/src/app/tasks/tasks-container/day-schedule/tasks-list/tasks-list.component.html
+++ b/src/app/tasks/tasks-container/day-schedule/tasks-list/tasks-list.component.html
@@ -7,7 +7,7 @@
   [cdkDropListConnectedTo]="connectedLists"
   (cdkDropListDropped)="onDrop($event)"
   >
-    <div *ngFor="let task of tasks">
+    <div *ngFor="let task of tasks" cdkDrag>
       {{task.getName()}}
     </div>
   </div>
