--- a/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.css
+++ b/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.css
@@ -1,6 +1,7 @@
 .day-schedule-view{
   display: flex;
   flex-direction: row;
+  height: 100%;
 }
 
 .day-table{
@@ -32,7 +33,8 @@
 }
 
 .hour-cell{
-  height: 0.8em;
+  /* height: 0.8em; */
+  height: 0.694%;;
   box-sizing: border-box;
 }
 
@@ -64,7 +66,8 @@
 }
 
 .task-cell{
-  height: 0.8em;
+  /* height: 0.8em; */
+  height: 0.694%;
   position: relative;
   width: 100%;
   box-sizing: border-box;
