--- a/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.css
+++ b/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.css
@@ -86,6 +86,7 @@
   background-color: aqua;
   position: absolute;
   z-index: 1;
+  padding: 0;
 }
 
 .drag-handler{
@@ -96,3 +97,26 @@
 .selected-cell{
   background-color: antiquewhite;
 }
+
+.task-name{
+  padding: 5;
+}
+
+
+.dragHandle{
+  position: absolute;
+  background-color: red;
+  height: 2px;
+  width: 100%;
+  cursor: ns-resize;
+}
+
+.dragHandle.top{
+  top:0;
+}
+
+.dragHandle.bottom{
+  bottom:0;
+}
+
+
