--- a/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.html
+++ b/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.html
@@ -37,10 +37,9 @@
             [id]="hour.time"
             #hour.time="cdkDropList"
             [cdkDropListData]="hour.tasks"
-            (cdkDropListDropped)="onDrop($event)"
+            (cdkDropListDropped)="dragginController.onDrop($event)"
             [cdkDropListSortingDisabled]="true"
             [style.height.px]="hour.height"
-            (dragover)="dragover($event, hour)"
             [ngClass]="{
               'upper-task-cell': hour.mainHour,
               'bottom-task-cell': !hour.mainHour && !hour.lastHour,
@@ -55,16 +54,16 @@
               #t.task.getId()="cdkDrag"
               cdkDrag
               cdkDragBoundary=".task-column"
-              [cdkDragDisabled]="isMoveTaskDisabled()"
+              (cdkDragStarted)="dragginController.dragStarted($event, t)"
               [style.height.px]="t.size"
               [style.z-index]="t.position"
               [style.top.px]="t.offset"
             >
-            <div [id]="'top_handler_'+t.task.getId()" cdkDragLockAxis="y" class="dragHandle top" cdkDrag (cdkDragMoved)="dragMove($event, t)"></div>
+            <div [id]="'top_handler_'+t.task.getId()" cdkDragLockAxis="y" class="dragHandle top" cdkDrag (cdkDragMoved)="resizer.dragMove($event, t)" (cdkDragStarted)="dragginController.dragStarted($event, t)"></div>
             <!-- <div #dragHandleTop draggable="true" class="dragHandle top" (drag)="drag($event)" (mouseenter)="resizeMouseEnter()" (mouseleave)="resizeMouseExit()" (dragstart)="resizeStart($event)" (dragend)="resizeEnd($event)" (mousedown)="resizeStart($event)"></div> -->
             <div class="task-name">{{ t.task.getName() }} </div>
             <!-- <div #dragHandleBottom draggable="true" class="dragHandle bottom" (drag)="drag($event)" (mouseenter)="resizeMouseEnter()" (mouseleave)="resizeMouseExit()" (dragstart)="resizeStart($event)" (dragend)="resizeEnd($event)" (mousedown)="resizeStart($event)"></div> -->
-            <div [id]="'bottom_handler_' + t.task.getId()" cdkDragLockAxis="y" class="dragHandle bottom" cdkDrag (cdkDragMoved)="dragMove($event, t)" (cdkDragEntered)="dragEntered($event)" (cdkDragExited)="dragExited($event)" ></div>
+            <div [id]="'bottom_handler_' + t.task.getId()" cdkDragLockAxis="y" class="dragHandle bottom" cdkDrag (cdkDragMoved)="resizer.dragMove($event, t)" ></div>
             </div>
           </li>
         </ul>
