Fix tasks start time and scheduler lists

--- a/src/app/tasks/tasks-container/day-schedule/day-schedule.component.html
+++ b/src/app/tasks/tasks-container/day-schedule/day-schedule.component.html
@@ -6,4 +6,7 @@
   <div class="tasks-container">
     <app-tasks-list #selected_day_tasks></app-tasks-list>
   </div>
+  <div class="scheduler">
+    <app-day-scheduler class="day-scheduler"></app-day-scheduler>
+  </div>
 </div>
