--- a/src/app/tasks/tasks-container/day-schedule/day-schedule.component.css
+++ b/src/app/tasks/tasks-container/day-schedule/day-schedule.component.css
@@ -7,3 +7,14 @@
   display: flex;
   flex-direction: row;
 }
+
+.scheduler{
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.day-scheduler{
+  width: 100%;
+  height: 100%;
+}
