--- a/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.css
+++ b/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.css
@@ -1,3 +1,5 @@
+@import '../../../../../styles.css';
+
 .day-schedule-view{
   display: flex;
   flex-direction: row;
@@ -56,13 +58,16 @@
 }
 
 .upper-task-cell{
-  border-bottom: 0.5px dotted grey;
+  /* border-bottom: 0.5px dotted grey; */
 }
 
 .bottom-task-cell{
   /* border-bottom: 1px solid black; */
-  border-bottom: 0.5px dotted grey;
+  /* border-bottom: 0.5px dotted grey; */
+}
 
+.middle-task-cell{
+  border-bottom: 0.5px dotted black;
 }
 
 .task-cell{
@@ -128,12 +133,23 @@
               0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
-.cdk-drag-placeholder {
+/* .cdk-drag-placeholder {
   opacity: 0.4;
   z-index: -100;
-
-}
+} */
 
 .cdk-drag-animating {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.drag-placeholder{
+  height: 100%;
+  width: 50%;
+  /* background: #fff; */
+  border: solid 2px #0084ff;
+  transition: transform 200ms ease;
+}
+
+.box-list.cdk-drop-list-dragging .drag-box:not(.cdk-drag-placeholder) {
+  transition: transform 500ms ease;
 }
