Transfer tasks from lsit to scheduler

--- a/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.html
+++ b/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.html
@@ -34,6 +34,7 @@
         (cdkDropListDropped)="dragginController.onDrop($event)"
         [cdkDropListSortingDisabled]="true"
         [style.height.px]="hour.height"
+        [cdkDropListConnectedTo]="['current-day']"
         [ngClass]="{
           'upper-task-cell': hour.mainHour,
           'bottom-task-cell': !hour.mainHour && !hour.lastHour,
