--- a/src/app/tasks/tasks-container/day-schedule/tasks-list/tasks-list.component.html
+++ b/src/app/tasks/tasks-container/day-schedule/tasks-list/tasks-list.component.html
@@ -1,4 +1,4 @@
-<div class="tasks-list">
+<div class="tasks-list" cdkDropListGroup #dropGroup>
   <div class="tasks-list"
   cdkDropList
   id="{{id}}"
