--- a/src/app/tasks/tasks-container/day-schedule/day-schedule.component.css
+++ b/src/app/tasks/tasks-container/day-schedule/day-schedule.component.css
@@ -1,20 +1,24 @@
 .tasks-container{
   width: 20%;
-  display: block;
 }
 
 .day-view{
   display: flex;
   flex-direction: row;
+  padding: 5px;
+  width:100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .scheduler{
   width: 100%;
   height: 100%;
   display: flex;
+  overflow: auto;
 }
 
 .day-scheduler{
   width: 100%;
-  height: 100%;
+  overflow: auto;
 }
