--- a/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.css
+++ b/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.css
@@ -9,7 +9,8 @@
 .day-table{
   border-collapse: collapse;
   border: 2px solid black;
-  width: 100%;
+  /* width: 100%; */
+  width: initial;
 }
 
 .hour-header{
@@ -21,6 +22,8 @@
   list-style: none;
   border: 1px solid black;
   padding: 0;
+  margin:0;
+  height: fit-content;
 }
 
 .task-column{
@@ -28,6 +31,8 @@
   border: 1px solid black;
   width: 100%;
   padding: 0;
+  margin:0;
+  height: fit-content;
 }
 
 .task-header{
