Project list style

--- a/src/app/tasks/lists-container/projects/projects.component.less
+++ b/src/app/tasks/lists-container/projects/projects.component.less
@@ -1,5 +1,14 @@
 @import '../../../../styles.less';
 
+
+.project-list-item{
+  .list-item;
+  padding:8px;
+  font-size: @fontSize * 1.5;
+}
+
+
+
 /* TODO: poprzenosić to jakoś  */
 .projects-view{
     display: flex;
@@ -70,12 +79,6 @@
     visibility: visible;
 }
 
-
-
-.project-filter{
-    padding-left: 10px;
-    height: 2em;
-}
 
 .mat-menu-item{
     font-size: small;
