--- a/src/app/tasks/lists-container/projects/projects.component.html
+++ b/src/app/tasks/lists-container/projects/projects.component.html
@@ -1,10 +1,10 @@
 
-<div class="app-panel shadow list-panel">
+<div class="list-panel">
     <h4 class="panel-header">Projekty</h4>
-    <div class="filter-controls controls-center">
-      <input class="project-filter filter border" placeholder="Wyszukaj projekt" autocomplete="off"
+    <div class="horizontal-container">
+      <input class="filter" placeholder="Wyszukaj projekt" autocomplete="off"
       (input)='getModel().filterProject($event.target.value)'>
-      <div id="project-filter-button" class="button filter-button" (click)="getState().toggleFilteringOpen()"></div>
+      <div id="project-filter-button" class="filter-button" (click)="getState().toggleFilteringOpen()"></div>
     </div>
 
     <div class="filter-container" *ngIf="getState().isFilteringOpen()">
@@ -87,7 +87,7 @@
         <ng-container [ngTemplateOutlet]="new_project"></ng-container>
       </div>
     </div>
-    <button class="button border controls-center" (click)='getAdding().onCreateProjectClick()'
+    <button class="create-button" (click)='getAdding().onCreateProjectClick()'
       *ngIf="!getState().isAddingOpen() && getState().isProjectsListOpen()">
       Dodaj projekt
     </button>
@@ -96,9 +96,7 @@
 
 <ng-template #project_item let-project>
   <div [ngClass]="{'selected-list-item': getModel().isSelectedProject(project),
-                    'project': true,
-                    'list-item':true,
-                    'border-radius': true}"
+                    'project-list-item':true}"
                     (click)='onProjectClick(project)'
                     >
     <div class="list-item-value">{{project.getName()}}</div>
