--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,4 @@
 
-@mainColor: red;
-
 /* You can add global styles to this file, and also import other style files */
 html, body{
     height: 100%;
@@ -313,10 +311,10 @@ html, body{
     float:right;
 }
 
-.filter-buttons-container{
+/* .filter-buttons-container{
     width: fit-content;
     float: right;
-}
+} */
 
 .filter-controls{
     display: flex;
@@ -328,13 +326,11 @@ html, body{
   margin-right: 10px;
 }
 
-.filter-button{
+/* .filter-button{
     width: 20px;
     height: 20px;
     margin-top: auto;
     margin-bottom: auto;
-    /* margin-right: 4px;
-    margin-left: 4px; */
     border: transparent;
     padding: 5px;
 
@@ -350,7 +346,7 @@ html, body{
 .filter-button:hover{
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 
-}
+} */
 
 .close-button{
     height: 30px;
